# Real_Madrid_AI_Platform

./: .gitignore  Dockerfile  README.md  firebase-service-account.json  main.py  poetry.lock~  pyproject.toml
backend/chatbot/api/: chatbot_api.py
backend/chatbot/utils/: chatbot_responses.py
backend/chatbot/utils/local_gguf_model/: config.json  generation_config.json
backend/match_commentary/api/: match_commentary_api.py
backend/match_commentary/utils/: api_football.py  commentary.py  env.py
backend/performance_prediction/api/: match_prediction_api.py
backend/performance_prediction/models/: decisiontree_model.pkl  lightgbm_model.pkl  logisticregression_model.pkl  naivebayes_model.pkl  svm_model.pkl  train_model.py  xgboost_model.pkl
backend/performance_prediction/utils/: data_loader.py
backend/personalized_content/api/: recommendations_api.py
backend/personalized_content/utils/: fetch_and_store_articles.py
backend/shared/: firestore.py
backend/tests/chatbot/: test_chatbot_api.py
backend/tests/match_commentary/: test_match_commentary_api.py
backend/tests/match_commentary/utils/: test_api_football.py  test_commentary.py
data/: cleaned_laliga_matches.csv  extr_la_liga_10_seasons.csv  la_liga_10_seasons.csv  real_madrid_10_seasons.csv  real_madrid_facts.jsonl
infra/chatbot/: Readme.md  main.tf  monitoring.tf  outputs.tf  variables.tf
infra/match_commentary/: Readme.md  main.tf  monitoring.tf  variables.tf
infra/performance_prediction/: Readme.md  main.tf  monitoring.tf  outputs.tf  variables.tf
infra/personalized_content/: Readme.md  main.tf  variables.tf
notebooks/: real-madrid-EDA.ipynb  scrape_data.ipynb
services/chatbot/: Dockerfile  Makefile  Readme.md  pyproject.toml
services/chatbot/app/: main.py
services/chatbot/app/api/: chatbot_api.py
services/match_commentary/: Dockerfile  Makefile  Readme.md  dynamodb.py  main.py  pyproject.toml
services/match_commentary/api/: match_commentary_api.py
services/performance_prediction/: Makefile  Readme.md  pyproject.toml
services/performance_prediction/api/: match_prediction_api.py
services/performance_prediction/data/: cleaned_laliga_matches.csv  la_liga_10_seasons.csv  local_train.ipynb  split_data.ipynb
services/performance_prediction/data/split/: test.csv  train.csv
services/performance_prediction/processing/: eda_and_clean.py  scrape_data.py
services/performance_prediction/scripts/: run_dnn_training_job.py  run_training_job.py  split_data.py
services/performance_prediction/training/: inference.py  requirements.txt  sagemaker_serving.py  train_dnn.py  train_entry.py
services/personalized_content/: Dockerfile  Makefile  Readme.md  dynamodb.py  main.py  pyproject.toml
services/personalized_content/api/: recommendations_api.py
services/personalized_content/utils/: fetch_and_store_articles.py
