[project]
name = "match-commentary"
version = "0.1.0"
description = "Real Madrid match commentary"
authors = [
    {name = "Caephas",email = "arinzeobidiegwu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "mangum (>=0.19.0,<0.20.0)",
    "boto3 (>=1.37.23,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
