[project]
name = "personalized-content"
version = "0.1.0"
description = "Personalized news feed for users"
authors = [
    {name = "Caephas",email = "arinzeobidiegwu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "mangum (>=0.19.0,<0.20.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "boto3 (>=1.37.23,<2.0.0)",
    "feedparser (>=6.0.11,<7.0.0)",
    "spacy (>=3.4.4,<3.5.0)",
    "blis (>=0.7.9,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
